--- a/public_html/about_us.html
+++ b/public_html/about_us.html
@@ -11,7 +11,7 @@
     <body>
     
         <h1> About Us </h1>    
-        <img src="E:\Junior Year\Fall Semester\Web Development\Basic HTML\Camera.png" alt="Camera" width="300" /> 
+        <img src="img\Camera.png" alt="Camera" width="300" /> 
         
         <ul>
             <li> <a href= "E:\Junior Year\Fall Semester\Web Development\Basic HTML\index.html"> Home </a> </li>
