Changed clock url link

--- a/public_html/hours.html
+++ b/public_html/hours.html
@@ -11,7 +11,7 @@
     <body>
     
         <h1> Hours, Location, &amp; Directions </h1>    
-        <img src="E:\Junior%20Year\Fall%20Semester\Web%20Development\Basic%20HTML\Clock.png" alt="Clock" width="300" /> 
+        <img src="img\Clock.png" alt="Clock" width="300" /> 
     
         <p>
 		Hours:
