Updated picture links

--- a/public_html/rule_of_thirds.html
+++ b/public_html/rule_of_thirds.html
@@ -11,8 +11,8 @@
     <body>
     
         <h1> Rule of Thirds </h1>    
-        <img src="../img/ruleOfThirds.png" alt="Rule of Thirds Diagram" width="300" /> 
-        <img src="../img/horse_carriage_thirds.jpg" alt="Rule of Thirds on Picture" width="410" />
+        <img src="img/ruleOfThirds.png" alt="Rule of Thirds Diagram" width="300" /> 
+        <img src="img/horse_carriage_thirds.jpg" alt="Rule of Thirds on Picture" width="410" />
     
         <p>
 		The rule of thirds is a photography principle which basically states that most good pictures don't put the subject in the middle box, but rather on one of the lines, either vertical or horizontal. This helps to draw the eye across or around the photo, as opposed to simply looking at the center alone. 
