Updated picture links

--- a/public_html/subject_ideas.html
+++ b/public_html/subject_ideas.html
@@ -11,7 +11,7 @@
     <body>
     
         <h1> Subject and Location Ideas </h1>    
-        <img src="E:\Junior%20Year\Fall%20Semester\Web%20Development\Basic%20HTML\horse_carriage.jpg" alt="Horse with Carriage - Iowa State Fair 2016" width="400" /> 
+        <img src="img/horse_carriage.jpg" alt="Horse with Carriage - Iowa State Fair 2016" width="400" /> 
     
         <p>
 			The greatest subjects and places to take pictures are the ones that you are already passionate about. But it can be hard to come up with your own ideas to start out with. Some basic ideas include:
