Deleted width aspect for the images.

--- a/public_html/about_us.html
+++ b/public_html/about_us.html
@@ -17,7 +17,7 @@
             experiences. 
         </p>
         
-        <img src="img/stick_people.png" alt="Stick People Us" width="300" />
+        <img src="img/stick_people.png" alt="Stick People of Us" />
         
                 <nav>
             <ul>
