--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,7 @@
     <body>
     
         <h1> Photography Inc. </h1>    
-        <img src="imgCamera.png" alt="Camera" width="300" /> 
+        <img src="img/Camera.png" alt="Camera" /> 
     
         <p>
             We value photography as an art, and welcome the opportunity to pass on skills to beginner and novice photographers. 
