Updated table in Rule of Thirds

--- a/public_html/rule_of_thirds.html
+++ b/public_html/rule_of_thirds.html
@@ -21,6 +21,34 @@
 		<p>
 		Most new cameras have a built in "Rule of Thirds" feature. It will place a grid, similar to the one shown above, on the viewing screen of the camera. This will not show up on the picture itself, but is simply a guide on the digital screen. 
 		</p>
+		
+		<p> In general: </p>
+		<table>
+            <thead>
+                <tr>
+                    <th> Left </th>
+                    <th> Center </th>
+                    <th> Right </th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td> Part of focus </td>
+                    <td> Part of focus </td>
+                    <td> Part of focus </td>
+                </tr>
+                 <tr>
+                    <td> Part of focus </td>
+                    <td> Avoid entirety of focus</td>
+                    <td> Part of focus </td>
+                </tr>
+                <tr>
+                    <td> Part of focus </td>
+                    <td> Part of focus </td>
+                    <td> Part of focus </td>
+                </tr>
+            </tbody>
+        </table>
             
         
         <nav>
