Edit table lines

--- a/public_html/rule_of_thirds.html
+++ b/public_html/rule_of_thirds.html
@@ -34,17 +34,17 @@
             <tbody>
                 <tr>
                     <td> Part of focus </td>
-                    <td> Part of focus </td>
+                    <td> Focus </td>
                     <td> Part of focus </td>
                 </tr>
                  <tr>
-                    <td> Part of focus </td>
+                    <td> Focus </td>
                     <td> Avoid entirety of focus</td>
-                    <td> Part of focus </td>
+                    <td> Focus </td>
                 </tr>
                 <tr>
                     <td> Part of focus </td>
-                    <td> Part of focus </td>
+                    <td> Focus </td>
                     <td> Part of focus </td>
                 </tr>
             </tbody>
