--- a/public_html/about_us.html
+++ b/public_html/about_us.html
@@ -27,6 +27,8 @@
                 <li> <a href= "hours.html"> Hours, Location, &amp; Directions </a> </li>
                 <li> <a href= "subject_ideas.html"> Subject and Location Ideas </a> </li>
                 <li> <a href= "rule_of_thirds.html"> Rule of Thirds </a> </li>
+				<li> <a href= "sign_up.html"> Sign Up </a> </li>
+				<li> <a href= "log_in.html"> Log In </a> </li>
             </ul>
         </nav>
         
