--- a/public_html/rule_of_thirds.html
+++ b/public_html/rule_of_thirds.html
@@ -19,7 +19,7 @@
 		</p>
 		
 		<p>
-		Most new cameras have a built in "Rule of Thirds" feature. It will place a grid, similar to the one shown above, on the viewing screen of the camera. This will not show up on the picture itself, but is simply a guide on the digital screen. 
+		Most new cameras have a built in "Rule of Thirds" feature. It will place a grid, similar to the one shown above, on the viewing screen of the camera. This will not show up on the picture itself, but is simply a guide on the digital screen. This is a conflict.
 		</p>
 		
 		<p> In general: </p>
