--- a/public_html/index.html
+++ b/public_html/index.html
@@ -5,6 +5,7 @@
 
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <title> Photography Inc.  </title>
     </head>
     
