Removed comments about original owners.

--- a/public_html/about_us.html
+++ b/public_html/about_us.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Navigator: Ashtyne;  Driver: Kyann --> 
+<!-- I claim this file in the name of Tyler Godfrey. --> 
 
 <html lang="en">
 
