--- a/public_html/hours.html
+++ b/public_html/hours.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- Navigator: Kyann;  Driver: Ashtyne --> 
+<!-- I claim this file in the name of Tyler Godfrey. --> 
 
 <html lang="en">
 
