--- a/public_html/index.html
+++ b/public_html/index.html
@@ -11,7 +11,8 @@
     <body>
     
         <h1> Photography Inc. </h1>    
-        <img src="img/Camera.png" alt="Camera" /> 
+        <img src="img/Camera.png" alt="Camera" />
+        <img src="img/graffiti_art.png" alt="Graffiti Art" width=300 height=245 />
     
         <p>
             We value photography as an art, and welcome the opportunity to pass on skills to beginner and novice photographers. 
