--- a/public_html/rule_of_thirds.html
+++ b/public_html/rule_of_thirds.html
@@ -4,6 +4,7 @@
 
     <head>
         <meta charset="utf-8">
+        <link rel="stylesheet" type="text/css" href="css/style.css">
         <title> Rule of Thirds - Photography Inc.  </title>
     </head>
     
