Added pictures, added inline style in the h1 for index, added style section in head of index for banners, added id selectors, added class selectors, did other small style modifications

--- a/public_html/about_us.html
+++ b/public_html/about_us.html
@@ -18,6 +18,8 @@
         </p>
                 
         <img src="img/stick_people.png" alt="Stick People of Us" />
+	<img src="img/simpson_logo.jpg" alt="Simpson College Logo" width=300 height=233 />
+	<img src="img/kent.jpg" alt="Simpson College Kent Center" width=300 height=233 />
         
         <nav>
             <ul>
