--- a/public_html/hours.html
+++ b/public_html/hours.html
@@ -11,7 +11,7 @@
     <body>
     
         <h1> Hours, Location, &amp; Directions </h1>    
-        <img src="img/Clock.png" alt="Clock" /> 
+        <img src="img/clock.png" alt="Clock" /> 
     
         <p>
 		Hours:
@@ -23,7 +23,7 @@
 			</ul>
 		
 		<p>	
-		Additional help times can be set up by contacting the studio by emailing phtographyInc@gmail.com or by calling (515)-391-0694 during business hours.
+		Additional help times can be set up by contacting the studio by emailing photographyInc@gmail.com or by calling (515)-391-0694 during business hours.
 		</p>
 		
 		<p>
