Added a few paragraphs to About Us page; added header image

--- a/public_html/about_us.html
+++ b/public_html/about_us.html
@@ -24,15 +24,19 @@
             <li> <a href= "log_in.html"> Log In </a> </li>
             </ul>
         </nav>
+                <img class="image" src="img/MadsenBrown_header.jpg" alt="Madsen-Brown Header" width="50%" />
+
         <h1 id="aboutUs"> About Us </h1>
 
 	<br>
         <p>
-           We're two college students trying to help others learn the art of photography. We gained our skills at Simpson College and through many study abroad
-            experiences.     
+           Simpson College students Ashtyne Madsen and Kyann Brown developed their passion for photography while attending schools. But they didn't want their artistry to be limited to just the classroom. Thus, Madsen-Brown Photography and Design was born. 
+           </p>
+           <p>
+           From landscape to portraits to newborn babies, these two ladies can capture exactly what you're looking for -- even if you don't know it yet. Study abroad experiences and in-class work gives the business an eclectic style that is unrivaled in the photography world.    
         </p>
-        <img class="image" src="img/stick_people.png" alt="Stick People of Us" />
-
+        <p> 
+            Affordable yet astounding quality, Madsen-Brown Photography and Design settles for nothing less than spectacular. Prices are available upon inquiry. 
         <footer> &copy; Copyright 2016, Ashtyne Madsen &amp; Kyann Brown </footer>
 
     </body>
