--- a/public_html/log_in.html
+++ b/public_html/log_in.html
@@ -7,6 +7,11 @@
         <meta charset="utf-8">
         <title> Log In - Photography Inc.  </title>
         <link rel="stylesheet" type="text/css" href="css/stylesheet.css">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+
     </head>
     
     <body>
@@ -25,15 +30,22 @@
         </nav>
         <h1 id="login"> Log In </h1>
 
-        <form>
-            Username:<br>
-            <input type="text" name="username">
-            <br>
-            Password:<br>
-            <input type="password" name="password">
-            <br><br>
-            <input type="submit" value="Submit">
-        </form>
+<div class="container">
+    <form>
+        <div class="form-group">
+            <label for="email">Email address:</label>
+            <input type="email" class="form-control" id="email">
+        </div>
+    <div class="form-group">
+        <label for="pwd">Password:</label>
+        <input type="password" class="form-control" id="pwd">
+    </div>
+    <div class="checkbox">
+        <label><input type="checkbox"> Remember me</label>
+    </div>
+        <button type="submit" class="btn btn-success">Submit</button>
+    </form>
+</div>
 
   
         
