Menu bar has been added to the login and signup pages. -Jordan

--- a/public_html/log_in.html
+++ b/public_html/log_in.html
@@ -15,19 +15,22 @@
     </head>
     
     <body>
-
-            <nav class="menu">
-            <ul>
-            <li> <a href= "index.html"> Home </a> </li>
-            <li> <a href= "about_us.html"> About Us </a> </li>
-            <li> <a href= "camera_tutorials.html"> Camera Tutorials </a> </li>
-            <li> <a href= "hours.html"> Hours, Location, &amp; Directions </a> </li>
-            <li> <a href= "subject_ideas.html"> Subject and Location Ideas </a> </li>
-            <li> <a href= "rule_of_thirds.html"> Rule of Thirds </a> </li>
-            <li> <a href= "sign_up.html"> Sign Up </a> </li>
-            <li id="selected"> <a  href= "log_in.html"> Log In </a> </li>
-            </ul>
-        </nav>
+      <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <a class="navbar-brand" href="index.html">Photography Inc</a>
+                </div>
+                <ul class="nav navbar-nav">
+                    <li> <a href= "index.html"> Home </a> </li>
+                    <li> <a href= "about_us.html"> About Us </a> </li>
+                    <li> <a href= "camera_tutorials.html"> Camera Tutorials </a> </li>
+                    <li> <a href= "hours.html"> Hours, Location, &amp; Directions </a> </li>
+                    <li> <a href= "subject_ideas.html"> Subject and Location Ideas </a> </li>
+                    <li> <a href= "rule_of_thirds.html"> Rule of Thirds </a> </li>
+                    <li> <a href= "sign_up.html"> Sign Up </a> </li>
+                </ul>
+            </div>
+      </nav>
         <h1 id="login"> Log In </h1>
 
 <div class="container">
