Added a paragraph to each page to explain about the page a little more and to fill in empty space. -Jordan

--- a/public_html/index.html
+++ b/public_html/index.html
@@ -61,6 +61,8 @@
         <p>
             We value photography as an art, and welcome the opportunity to pass on skills to beginner and novice photographers. 
         </p>
+        <p> On this website you will be able to find a short tutorial, an explanation to the rule of thirds, about us, and the hours we are available to help you            with any of your photography troubles. We hope this website gives you all the tools you need to become a great photographer within the near future!
+        </p>
     
     
         <footer> &copy; Copyright 2016, Ashtyne Madsen &amp; Kyann Brown </footer>
