--- a/public_html/about_us.html
+++ b/public_html/about_us.html
@@ -38,8 +38,9 @@
 	<br>
         <p>
            We're two college students trying to help others learn the art of photography. We gained our skills at Simpson College and through many study abroad
-            experiences.     
+            experiences. We have taken an interest in creating this website because we believe that everyone should know the joys of owning their very own camera. We             fell in love with photography while we were in Intro to Photography in high school. It made us really appreciate the fact that memories can be kept                   within a small piece of paper that holds a photo on the front side.                    
         </p>
+        
         <img class="image" src="img/stick_people.png" alt="Stick People of Us" />
 
         <footer> &copy; Copyright 2016, Ashtyne Madsen &amp; Kyann Brown </footer>
