added bootstrap to about us, camera tutorials page;

--- a/public_html/about_us.html
+++ b/public_html/about_us.html
@@ -3,7 +3,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8">
-    <title>Example Bootstrap Document</title>
+    <title>About Us</title>
 
     <!-- This says our CSS is compatible with phones, and phones
          don't need to scale it strangely. -->
@@ -96,6 +96,11 @@
     <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
     <span class="sr-only">Next</span>
   </a>
+<script>
+    $('.carousel').carousel({
+        interval: 3000
+    })
+</script>
 </div>
 
         <footer> &copy; Copyright 2016, Ashtyne Madsen &amp; Kyann Brown </footer>
