Made alerts with bootstrap on the login page so people can see news that they may have missed. -Jordan

--- a/public_html/log_in.html
+++ b/public_html/log_in.html
@@ -48,6 +48,18 @@
         <button type="submit" class="btn btn-success">Submit</button>
     </form>
 </div>
+<br>
+<br>
+<div class="container">
+<div class="alert alert-info fade in">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Sign Up Now!</strong> If you don't already have an account to the page, go ahead and sign up on the sign up page found in the menu bar at the top.
+  </div>
+<div class="alert alert-info fade in">
+    <a href="#" class="close" data-dismiss="alert" aria-label="close">&times;</a>
+    <strong>Times!</strong> Make sure to check out the new hours that we are available to help with all of your camera/photography needs.
+</div>
+</div>
 
   
         
