minor edits to hours, locations and directions page

--- a/public_html/hours.html
+++ b/public_html/hours.html
@@ -43,13 +43,13 @@
 		Hours:
 		</p>
 			<ul>
-				<li> Monday	- Friday: 10:00 a.m. - 5:30 p.m.</li> 
-				<li> Saturday: 9:00 a.m. - 4:00 p.m.</li>
-				<li> Sunday: 12:00 p.m. - 6:30 p.m. </li>
+				<li> Monday	- Friday: 10-5:30 p.m.</li> 
+				<li> Saturday: 9-4 p.m.</li>
+				<li> Sunday: 12-6:30 p.m. </li>
 			</ul>
 		
 		<p>	
-		Additional help times can be set up by contacting the studio by emailing phtographyInc@gmail.com or by calling (515)-391-0694 during business hours.
+		Additional help times can be set up by contacting the studio by emailing phtographyInc@gmail.com or by calling 515-391-0694 during business hours.
 		</p>
 		
 		<p>
@@ -60,7 +60,7 @@
 		
 		<p>
 		Directions:
-		2 blocks east of Simpson College's Kent Campus Center.
+		Walk two blocks east of Simpson College's Kent Campus Center. We're the pink office suite next to Hal's Meats and Frozens. 
 		</p>
             
 	    
