--- a/public_html/sign_up.html
+++ b/public_html/sign_up.html
@@ -29,7 +29,8 @@
                 <li> <a href= "subject_ideas.html"> Subject and Location Ideas </a> </li>
             </ul>
         </div>
-        <div>
+        </nav>
+        </div>
             <nav class="navbar navbar-default navbar-fixed-top" style="float: right">
                 <div class="container-fluid">
                     <ul class="nav navbar-nav" style="width: 20%; overflow: hidden; height: 44px;">
