Nav bar adjustments

--- a/public_html/sign_up.html
+++ b/public_html/sign_up.html
@@ -14,26 +14,16 @@
     </head>
     
     <body>
-    <div style="overflow: auto;">
-        <div>
+<div style="overflow: auto; height: 45px;">
         <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">Photography Inc</a>
-                </div>
-               <ul class="nav navbar-nav" style="width: 80%; overflow: hidden; height: 44px; float: left;">
-                <li> <a href= "index.html"> Home </a> </li>
-                <li> <a href= "about_us.html"> About Us </a> </li>
-                <li> <a href= "camera_tutorials.html"> Camera Tutorials </a> </li>
-                <li> <a href= "hours.html"> Hours, Location, &amp; Directions </a> </li>
-                <li> <a href= "subject_ideas.html"> Subject and Location Ideas </a> </li>
-            </ul>
-        </div>
-        </nav>
-        </div>
-            <nav class="navbar navbar-default navbar-fixed-top" style="float: right">
-                <div class="container-fluid">
-                    <ul class="nav navbar-nav" style="width: 20%; overflow: hidden; height: 44px;">
+            <div class="container-fluid" style="width: 100%">
+                    <ul class="nav navbar-nav" style="overflow: hidden; height: 45px">
+                        <li> <a class="navbar-brand" href= "index.html"> Photography Inc </a> </li>
+                        <li> <a href= "about_us.html"> About Us </a> </li>
+                        <li> <a href= "camera_tutorials.html"> Camera Tutorials </a> </li>
+                        <li> <a href= "hours.html"> Hours, Location, &amp; Directions </a> </li>
+                        <li> <a href= "subject_ideas.html"> Subject and Location Ideas </a> </li>
+                        <li class="active" style="overflow: hidden; width: 95px;"> <a href= "sign_up.html"> Sign Up </a> </li>
                         <li> <a href= "log_in.html"> Log In </a> </li>
                     </ul>
                 </div>
