--- a/public_html/log_in.html
+++ b/public_html/log_in.html
@@ -15,21 +15,21 @@
     </head>
     
     <body>
-      <nav class="navbar navbar-default navbar-fixed-top">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <a class="navbar-brand" href="index.html">Photography Inc</a>
+<div style="overflow: auto; height: 45px;">
+        <nav class="navbar navbar-default navbar-fixed-top">
+            <div class="container-fluid" style="width: 100%">
+                    <ul class="nav navbar-nav" style="overflow: hidden; height: 45px">
+                        <li> <a class="navbar-brand" href= "index.html"> Photography Inc </a> </li>
+                        <li> <a href= "about_us.html"> About Us </a> </li>
+                        <li> <a href= "camera_tutorials.html"> Camera Tutorials </a> </li>
+                        <li> <a href= "hours.html"> Hours, Location, &amp; Directions </a> </li>
+                        <li> <a href= "subject_ideas.html"> Subject and Location Ideas </a> </li>
+                        <li> <a href= "sign_up.html"> Sign Up </a> </li>
+                        <li class="active" style="overflow: hidden; width: 80px;"> <a href= "log_in.html"> Log In </a> </li>
+                    </ul>
                 </div>
-                <ul class="nav navbar-nav">
-                    <li> <a href= "index.html"> Home </a> </li>
-                    <li> <a href= "about_us.html"> About Us </a> </li>
-                    <li> <a href= "camera_tutorials.html"> Camera Tutorials </a> </li>
-                    <li> <a href= "hours.html"> Hours, Location, &amp; Directions </a> </li>
-                    <li> <a href= "subject_ideas.html"> Subject and Location Ideas </a> </li>
-                    <li> <a href= "sign_up.html"> Sign Up </a> </li>
-                </ul>
-            </div>
-      </nav>
+            </nav>
+        </div>
         <h1 id="login"> Log In </h1>
 
 <div class="container">
